# Barnacoin

./: .gitignore  INSTALL  Makefile.am  README.md  configure.ac
.tx/: config
contrib/: README.md  barnacoin-qt.pro  barnacoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  barnacoin-qt.desktop  barnacoin-qt.install  barnacoin-qt.lintian-overrides  barnacoin-qt.protocol  barnacoind.bash-completion  barnacoind.examples  barnacoind.install  barnacoind.lintian-overrides  barnacoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  deps-linux.yml  deps-win.yml  gitian-linux.yml  gitian-osx-barnacoin.yml  gitian-win.yml  qt-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  gitian-building.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  release-notes-0.3.21.md  release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.3.24.md  release-notes-0.4.0.md  release-notes-0.4.1.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.4.6.md  release-notes-0.5.0.md  release-notes-0.5.1.md  release-notes-0.5.2.md  release-notes-0.5.3.md  release-notes-0.5.4.md  release-notes-0.5.5.md  release-notes-0.6.0.md  release-notes-0.6.2.md  release-notes-0.6.3.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.1.md  release-notes-0.8.2.md  release-notes-0.8.3.md  release-notes-0.8.4.md  release-notes-0.8.5.md  release-notes-0.8.6.md  release-notes-0.9.0.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-barnacoind-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  send.sh  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.include  addrman.h  alert.h  allocators.h  barnacoin-cli-res.rc  barnacoin-cli.cpp  barnacoind-res.rc  barnacoind.cpp  base58.cpp  base58.h  bignum.h  bitcoin-config.h  bitcoin-config.h.in  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  clientversion.h  coins.h  compat.h  core.h  db.h  hash.h  init.cpp  init.h  key.h  keystore.h  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  miner.cpp  miner.h  mruset.h  net.cpp  net.h  netbase.h  noui.cpp  (+31 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: barnacoin_find_bdb48.m4  barnacoin_qt.m4  barnacoin_subdir_to_include.m4
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  barnacoin.cpp  barnacoin.qrc  barnacoinaddressvalidator.cpp  barnacoinaddressvalidator.h  barnacoinamountfield.cpp  barnacoinamountfield.h  barnacoingui.cpp  barnacoingui.h  barnacoinstrings.cpp  barnacoinunits.cpp  barnacoinunits.h  clientmodel.h  coincontroldialog.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macdockiconhandler.mm  macnotificationhandler.mm  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentrequest.proto  paymentserver.cpp  paymentserver.h  qvalidatedlineedit.cpp  receivecoinsdialog.cpp  receivecoinsdialog.h  receiverequestdialog.cpp  recentrequeststablemodel.cpp  recentrequeststablemodel.h  (+20 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: barnacoin_ach.ts  barnacoin_af_ZA.ts  barnacoin_ar.ts  barnacoin_be_BY.ts  barnacoin_bg.ts  barnacoin_bs.ts  barnacoin_ca.ts  barnacoin_ca@valencia.ts  barnacoin_ca_ES.ts  barnacoin_cmn.ts  barnacoin_cs.ts  barnacoin_cy.ts  barnacoin_da.ts  barnacoin_de.ts  barnacoin_el_GR.ts  barnacoin_en.ts  barnacoin_eo.ts  barnacoin_es.ts  barnacoin_es_CL.ts  barnacoin_es_DO.ts  barnacoin_es_MX.ts  barnacoin_es_UY.ts  barnacoin_et.ts  barnacoin_eu_ES.ts  barnacoin_fa.ts  barnacoin_fa_IR.ts  barnacoin_fi.ts  barnacoin_fr.ts  barnacoin_fr_CA.ts  barnacoin_gl.ts  barnacoin_gu_IN.ts  barnacoin_he.ts  barnacoin_hi_IN.ts  barnacoin_hr.ts  barnacoin_hu.ts  barnacoin_id_ID.ts  barnacoin_it.ts  barnacoin_ja.ts  barnacoin_ka.ts  barnacoin_kk_KZ.ts  (+31 more)
src/qt/res/: barnacoin-qt-res.rc
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  test_barnacoin.cpp  transaction_tests.cpp  uint256_tests.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: README.md
(+16 files in other folders)
